<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_container"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="2"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/discover_chars"

            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/read_rssi_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/read_rssi"

            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_below="@+id/button_container"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#D3D3D3"/>

    <include
        layout="@layout/service_list_row"
        android:id="@+id/info_container"
        android:layout_below="@+id/info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/characteristics_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characteristics"
        android:layout_below="@+id/info_container"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#D3D3D3"/>

    <ListView
        android:id="@+id/descriptor_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/characteristics_header">

    </ListView>


</RelativeLayout>