<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_container"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="3"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/pair_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pair"
            android:onClick="onPairClicked"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/discover_services_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/discover_services"
            android:onClick="onDiscoverServicesClicked"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/connect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect_spp"
            android:onClick="onConnectClicked"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_below="@+id/button_container"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#D3D3D3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_container"
        android:layout_below="@+id/info_header"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/address_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/address_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/address_with_colon"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:text="00:00:00:00:00:00:00"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/name_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/name_with_colon"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:text="Device Name Here"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

        <!--
        <LinearLayout
            android:id="@+id/state_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/state_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/state_with_colon"/>

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:text="Disconnected (0)"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/rssi_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/rssi_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/rssi_with_colon"/>

            <TextView
                android:id="@+id/rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:text="-78"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
        -->

    </LinearLayout>

    <TextView
        android:id="@+id/services_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:layout_below="@+id/info_container"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#D3D3D3"/>

    <ListView
        android:id="@+id/services_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/services_header">

    </ListView>


</RelativeLayout>